# talkwebZYF

./: QA.py  README.md  aa.py  b.py  color_log.py  content.txt  doc_parser_embedder.py  docs_reader2split.py  embedding.py  fastAPI_test.py  history_message.py  langchain_zyf.py  llm.py  main.py  mineruParse.py  mineru_parse.py  my_llm.py  new_llm.py  pdf_mineru.py  pgvector.py  prompt_genetator.py  pyproject.toml  pyvenv.cfg  question.py  requirements.txt  sql_query.py  user.py
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
mineru.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mineru/backend/pipeline/: batch_analyze.py  model_init.py  model_json_to_middle_json.py  para_split.py  pipeline_analyze.py  pipeline_magic_model.py  pipeline_middle_json_mkcontent.py
mineru/backend/vlm/: base_predictor.py  hf_predictor.py  predictor.py  sglang_client_predictor.py  sglang_engine_predictor.py  token_to_middle_json.py  utils.py  vlm_analyze.py  vlm_magic_model.py  vlm_middle_json_mkcontent.py
mineru/cli/: client.py  common.py  fast_api.py  gradio_app.py  models_download.py
mineru/data/data_reader_writer/: multi_bucket_s3.py  s3.py
mineru/utils/: block_pre_proc.py  block_sort.py  boxbase.py  cli_parser.py  config_reader.py  cut_image.py  draw_bbox.py  enum_class.py  format_utils.py  hash_utils.py  language.py  model_utils.py  models_download_utils.py  ocr_utils.py  pdf_classify.py  pdf_image_tools.py  pdf_reader.py  pdf_text_tool.py  span_block_fix.py  span_pre_proc.py
router/: chat.py  file.py  knowledge.py
sql查询/: 查询.sql
(+50 files in other folders)
