[project]
name = "pgvector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "doclayout-yolo>=0.0.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "pandas>=2.3.1",
    "pdfminer>=20191125",
    "psycopg2>=2.9.10",
]
